Fixing word wrap

--- a/src/components/Table/Table.less
+++ b/src/components/Table/Table.less
@@ -44,7 +44,12 @@
 	tbody.scrollContent {
 		display: block;
 		overflow: auto;
-		width: 100%
+		width: 99%;
+
+		.lucid-Table-Td{
+			white-space: pre-wrap;
+			word-break: break-all;
+		}
 	}
 	// `Table`.`hasWordWrap` prop
 	.lucid-Table-Td,
